# microSDC

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  sdkconfig  sdkconfig.bak
Simple-Web-Server/: CMakeLists.txt  client_http.hpp  client_https.hpp  http_examples.cpp  https_examples.cpp  server_http.hpp  server_https.hpp
Simple-Web-Server/tests/: CMakeLists.txt  io_test.cpp
certs/: server.key
components/BME280/: BME280.cpp  BME280.hpp  CMakeLists.txt
components/MicroSDC/: CMakeLists.txt  DeviceCharacteristics.hpp  DeviceService.cpp  DeviceService.hpp  GetService.cpp  GetService.hpp  MicroSDC.cpp  MicroSDC.hpp  SDCConstants.hpp  SampleMdib.hpp  SetService.hpp  SoapService.cpp  SoapService.hpp  StateHandler.cpp  StateHandler.hpp  StaticService.cpp  StaticService.hpp  SubscriptionManager.cpp  SubscriptionManager.hpp
components/MicroSDC/datamodel/: BICEPS_MessageModel.cpp  BICEPS_MessageModel.hpp  BICEPS_ParticipantModel.cpp  BICEPS_ParticipantModel.hpp  ExpectedElement.cpp  ExpectedElement.hpp  MDPWSConstants.hpp  MessageModel.cpp  MessageModel.hpp  MessageSerializer.cpp  MessageSerializer.hpp  NamespaceMap.hpp  ws-MetadataExchange.cpp  ws-MetadataExchange.hpp  ws-addressing.cpp  ws-addressing.hpp  ws-discovery.cpp  ws-discovery.hpp  ws-eventing.cpp  ws-eventing.hpp  xs_duration.cpp  xs_duration.hpp
components/MicroSDC/dpws/: DPWSHost.cpp  DPWSHost.hpp  MessagingContext.hpp  MetadataProvider.cpp  MetadataProvider.hpp
components/MicroSDC/networking/: NetworkConfig.cpp
components/MicroSDC/services/: DeviceService.cpp  DeviceService.hpp  GetService.cpp  GetService.hpp  Request.cpp  SetService.cpp  SetService.hpp  SoapService.cpp  SoapService.hpp  StateEventService.cpp  StateEventService.hpp  StaticService.cpp  WebServerInterface.hpp
components/MicroSDC/uuid/: UUID.hpp  UUIDGenerator.cpp  UUIDGenerator.hpp
components/MicroSDC/wsdl/: GetServiceWSDL.hpp  StateEventServiceWSDL.hpp
components/Networking/: CMakeLists.txt  Ethernet.cpp  Kconfig  NetworkHandler.cpp  WiFi.cpp
components/UUID/: CMakeLists.txt  UUID.cpp
components/WS2812/: CMakeLists.txt  WS2812.cpp  WS2812.hpp
components/WebServer/: CMakeLists.txt  ServiceInterface.hpp  WebServer.cpp  WebServer.hpp
components/frozen/: CMakeLists.txt
components/rapidxml/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/SimpleDevice/: CMakeLists.txt  NetworkInterface.hpp  main.cpp
examples/esp32/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.old  sdkconfig.working
examples/esp32/components/BME280/: BME280.cpp  BME280.hpp
examples/esp32/components/MicroSDC/: CMakeLists.txt  SessionManager.esp32.hpp
examples/esp32/components/Networking/: Ethernet.hpp  NetworkHandler.hpp  NetworkInterface.hpp  WiFi.hpp
examples/esp32/components/SessionManager/: CMakeLists.txt  SessionManager.cpp  SessionManager.hpp
examples/esp32/components/WS2812/: CMakeLists.txt  WS2812.hpp
examples/esp32/components/WebServer/: CMakeLists.txt  HTTPRequest.cpp  HTTPRequest.hpp  WebServer.cpp  WebServer.hpp
examples/esp32/components/WebServer/certs/: serverCert.pem
examples/esp32/main/: CMakeLists.txt  Kconfig.projbuild  SimpleDevice.cpp  SimpleDevice.hpp  main.cpp
main/: Kconfig.projbuild  main.cpp
ports/esp/: ClientSession.esp.cpp  ClientSession.esp.hpp  Request.esp.cpp  Request.esp.hpp  WebServer.esp.cpp  WebServer.esp.hpp
ports/linux/: ClientSession.linux.cpp  ClientSession.linux.hpp  Request.linux.cpp  Request.linux.hpp  WebServer.linux.cpp  WebServer.linux.hpp
rapidxml/: CMakeLists.txt
src/: CMakeLists.txt  Casting.hpp  DeviceCharacteristics.cpp  DeviceCharacteristics.hpp  Log.cpp  Log.hpp  MetadataProvider.cpp  MetadataProvider.hpp  MicroSDC.cpp  MicroSDC.hpp  SDCConstants.hpp  SessionManagerInterface.hpp  StateHandler.cpp  StateHandler.hpp  SubscriptionManager.cpp  SubscriptionManager.hpp  url.hpp
src/ClientSession/: ClientSession.hpp  SessionManager.cpp  SessionManager.hpp
src/SessionManager/: SessionManager.cpp  SessionManager.esp32.cpp  SessionManager.esp32.hpp  SessionManager.hpp
src/WebServer/: Request.cpp  Request.esp32.cpp  Request.esp32.hpp  Request.hpp  WebServer.esp32.cpp  WebServer.esp32.hpp  WebServer.hpp
src/datamodel/: BICEPS_MessageModel.cpp  BICEPS_MessageModel.hpp  BICEPS_ParticipantModel.cpp  BICEPS_ParticipantModel.hpp  ExpectedElement.cpp  ExpectedElement.hpp  MDPWSConstants.hpp  MessageModel.cpp  MessageModel.hpp  MessageSerializer.cpp  MessageSerializer.hpp  ws-MetadataExchange.cpp  ws-MetadataExchange.hpp  ws-addressing.cpp  ws-addressing.hpp  ws-discovery.cpp  ws-discovery.hpp  ws-dpws.cpp  ws-dpws.hpp  ws-eventing.cpp  ws-eventing.hpp  xs_duration.cpp  xs_duration.hpp
src/discovery/: DiscoveryService.cpp  DiscoveryService.hpp  MessagingContext.cpp  MessagingContext.hpp
src/dpws/: DPWSHost.cpp  DPWSHost.hpp  MessagingContext.cpp  MessagingContext.hpp  MetadataProvider.cpp  MetadataProvider.hpp
src/networking/: NetworkConfig.cpp  NetworkConfig.hpp
src/services/: DeviceService.cpp  DeviceService.hpp  GetService.cpp  GetService.hpp  Request.cpp  Request.hpp  ServiceInterface.hpp  SetService.cpp  SetService.hpp  SoapFault.hpp  SoapService.cpp  SoapService.hpp  StateEventService.cpp  StateEventService.hpp  StaticService.cpp  StaticService.hpp  WebServerInterface.hpp
src/uuid/: UUID.cpp  UUID.hpp  UUIDGenerator.cpp  UUIDGenerator.hpp
src/wsdl/: GetServiceWSDL.hpp  SetServiceWSDL.hpp
