set(COMPONENT_SOURCES
        "datamodel/BICEPS_MessageModel.cpp"
        "datamodel/BICEPS_ParticipantModel.cpp"
        "datamodel/ExpectedElement.cpp"
        "datamodel/MessageModel.cpp"
        "datamodel/MessageSerializer.cpp"
        "datamodel/ws-addressing.cpp"
        "datamodel/ws-discovery.cpp"
        "datamodel/ws-dpws.cpp"
        "datamodel/ws-eventing.cpp"
        "datamodel/ws-MetadataExchange.cpp"
        "datamodel/xs_duration.cpp"
        "dpws/DPWSHost.cpp"
        "dpws/MessagingContext.cpp"
        "dpws/MetadataProvider.cpp"
        "networking/NetworkConfig.cpp"
        "services/DeviceService.cpp"
        "services/GetService.cpp"
        "services/Request.cpp"
        "services/SetService.cpp"
        "services/StateEventService.cpp"
        "services/SoapService.cpp"
        "services/StaticService.cpp"
        "uuid/UUID.cpp"
        "uuid/UUIDGenerator.cpp"
        "DeviceCharacteristics.cpp"
        "MicroSDC.cpp"
        "StateHandler.cpp"
        "SubscriptionManager.cpp"
    )

idf_component_register(
    SRCS ${COMPONENT_SOURCES}
    INCLUDE_DIRS "."
    REQUIRES "rapidxml" "asio" "pthread" "esp_http_client"
    )
